--- a/client/storiesclient/Cargo.toml
+++ b/client/storiesclient/Cargo.toml
@@ -10,3 +10,5 @@ reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 rand = "0.8"
+anyhow = "1.0.86"
+regex = "1.10.5"
